--- a/estilo/style.css
+++ b/estilo/style.css
@@ -54,7 +54,7 @@
     transform:translate(-50%,-50%);
     width:750px;
     height:950px;
-    display:none;
+    opacity:0;
 }
 #looseGame h1{
     margin-top:20%;
